--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
