--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
+    "log": "^6.0.0",
     "mongoose": "^5.9.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
